--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
 				</a>
 				<a href="https://github.com/JustinasAst/baigiamasis.front" target='_blank' class="porfolio-item">
 					<img
-						src="photos/bagiamasis1.png"
+						src="photos/baigiamasis1.png"
 						alt=""
 						class="porfolio-img"
 					/>
