--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 			</div>
 			<img
 				class="about-me-img"
-				src="https://scontent.fvno2-1.fna.fbcdn.net/v/t1.6435-9/69171679_3455972717762405_4238554163287425024_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=SugCyqgl-aYAX9e5P0X&tn=-_I2ZTVs4jREeNMw&_nc_ht=scontent.fvno2-1.fna&oh=e6c5ddc4c46316ae36d26e829f2e2e7f&oe=61A1B6A6"
+				src="photos/69171679_3455972717762405_4238554163287425024_n.jpg"
 				alt="justinas"
 			/>
 		</section class = "my-progress" > 
